Fix: Change padding in step2 to look not so cramped on mobile

--- a/components/Create/wizard/Wizard.module.scss
+++ b/components/Create/wizard/Wizard.module.scss
@@ -499,6 +499,10 @@
     padding: 5rem;
   }
 
+  .step2 {
+    padding: 2.5rem;
+  }
+
   .step3 {
     padding: 1rem;
 
